[tool.poetry]
name = "Alive"
version = "0.1.0"
description = "To keep my account alive"
authors = ["AmpliDude"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
